# fx-infra-espocrm

./: .gitignore  Makefile  README.md  pyproject.toml
ansible/: ansible.cfg
ansible/group_vars/all/: vars.yml  vault.yml
compose/: .env.example  docker-compose.yml
compose/caddy/: Caddyfile
docs/: setup.md
volumes/espocrm/custom/Espo/Custom/Resources/i18n/en_US/: Lead.json
volumes/espocrm/custom/Espo/Custom/Resources/layouts/Lead/: detail.json  list.json
volumes/espocrm/custom/Espo/Custom/Resources/metadata/clientDefs/: Lead.json
volumes/espocrm/custom/Espo/Custom/Resources/metadata/entityDefs/: Lead.json
