[project]
name = "infra-espocrm"
version = "0.1.0"
description = "Infrastructure for EspoCRM deployment"
authors = [
    {name = "user"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "ansible (>=13.6.0,<14.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
